--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,110 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Environment variables and secrets
+*.env
+.env.local
+.env.*.local
+**/.env
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb_checkpoints/
+
+# Testing / coverage
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.pytest_cache/
+
+# Logs
+*.log
+logs/
+pip-log.txt
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+db.sqlite3
+
+# Model files and ML artifacts
+*.pt
+*.pth
+*.ckpt
+*.h5
+*.pkl
+*.joblib
+models/
+checkpoints/
+wandb/
+
+# Gradio specific
+gradio_cached_examples/
+flagged/
+*.gradio
+
+# Large data files
+*.csv
+*.parquet
+*.arrow
+data/
+datasets/
+
+# Hugging Face cache
+.cache/
+huggingface/
+transformers_cache/
+
+# Docker
+*.dockerignore
+docker-compose.override.yml
+
+# System files
+.DS_Store
+Thumbs.db
 .gitattributes
